@@ -1,6 +1,10 @@
 ispCP ω 1.0.1 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2009-03-04 Daniel Andreca
+	- GUI:
+		* Gender not displayed for reseller on order display
+
 2009-03-04 Thomas Häber
 	- GUI:
 		* Fixed #1719: Error on hosting_plan_edit.php
